--- a/theme/senku.css
+++ b/theme/senku.css
@@ -42,7 +42,6 @@ twitter: #DaisyIsTrash
 #windowMain,
 dialog {
     background-color: @senku_background;
-
 }
 
 #img_logo {
@@ -104,27 +103,29 @@ dialog {
 
 #boxScore grid>label:nth-child(5n + 1) {
     background-color: @senku_label_title_values;
-   
+
 }
 
 #boxScore grid>label:nth-child(5n + 2) {
-    background-color:#5AAAA4;
-   
+    background-color: #5AAAA4;
+
 }
+
 #boxScore grid>label:nth-last-child(5n + 3) {
     background-color: #5AAAA4;
-    
+
 }
 
 #boxScore grid>label:nth-last-child(5n + 4) {
     background-color: @senku_label_title_values;
-    
+
 }
 
 #boxScore grid>label:nth-child(-n + 5) {
     background-color: #5AAAA4;
-    
+
 }
+
 #boxScore .rank {
     border: 3px solid #F1895C;
     border-radius: 10px;
@@ -288,7 +289,6 @@ button:hover {
 **********************************************************************************************/
 frame {
     background-color: @senku_background;
-
 }
 
 frame>label {
@@ -311,6 +311,18 @@ dialog label {
 
 dialog>radiobutton {
     opacity: .85;
+}
+
+tooltip {
+    background-color: transparent;
+    border: 1px solid #F1895C;
+    border-radius: 10px;
+}
+
+tooltip label {
+    color: @senku_text_light;
+    background-color: @senku_background;
+    font: normal bold 1em Sans-Serif;
 }
 
 /**********************************************************************************************
